# TinyEngine

./: .gitmodules  CMakeLists.txt  LICENSE
assets/: project.xml
cmake/: imgui.cmake  rlImGui.cmake  src.cmake
src/TinyEngine/: TinyEngine.cpp  TinyEngine.hpp
src/TinyEngine/ActionsQueue/: ActionsQueue.cpp  ActionsQueue.hpp  ActionsQueueContainer.cpp  ActionsQueueContainer.hpp  CustomAction.cpp  CustomAction.hpp  IAction.cpp  IAction.hpp  SequenceActions.cpp  SequenceActions.hpp
src/TinyEngine/Assets/: AllAssets.cpp  AllAssets.hpp  AssetParameters.cpp  AssetParameters.hpp  Assets.cpp  Assets.hpp  IAsset.cpp  IAsset.hpp  TextureAssets.cpp  TextureAssets.hpp
src/TinyEngine/Common/Components/: RectComponent.cpp  RectComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
src/TinyEngine/Core/: Application.cpp  Application.hpp  Constants.cpp  Constants.hpp  Context.cpp  Context.hpp  Core.cpp  Core.hpp  Debug.cpp  Debug.hpp  Factory.cpp  Factory.hpp  FileSystem.cpp  FileSystem.hpp  FileSystemManager.cpp  FileSystemManager.hpp  Forwards.cpp  Forwards.hpp  FpsCounter.cpp  FpsCounter.hpp  Gui.cpp  Gui.hpp  ILoader.hpp  LoaderManager.cpp  LoaderManager.hpp  Logger.cpp  Logger.hpp  PathBuilder.cpp  PathBuilder.hpp  Paths.cpp  Paths.hpp  Project.cpp  Project.hpp  Timer.cpp  Timer.hpp  Timers.cpp  Timers.hpp  Window.cpp  Window.hpp  WindowLoader.cpp  (+1 more)
src/TinyEngine/Core/Application/: Application.cpp  Application.hpp  Context.cpp  Context.hpp  Project.cpp  Project.hpp
src/TinyEngine/Core/Assets/: Asset.cpp  Asset.hpp  AssetFile.cpp  AssetFile.hpp  AssetHolder.cpp  AssetHolder.hpp  AssetLoader.cpp  AssetLoader.hpp  AssetTexture.cpp  AssetTexture.hpp  Assets.cpp  Assets.hpp
src/TinyEngine/Core/Conditions/: Condition.cpp  Condition.hpp  ConditionContext.cpp  ConditionContext.hpp  ConditionContextVariable.cpp  ConditionContextVariable.hpp  ConditionVariable.cpp  ConditionVariable.hpp
src/TinyEngine/Core/Data/: Factory.hpp  Singleton.hpp  String.cpp  String.hpp  Time.cpp  Time.hpp
src/TinyEngine/Core/Debug/: Debug.cpp  Debug.hpp
src/TinyEngine/Core/Event/: Event.cpp  EventSender.cpp  EventSubscriber.cpp
src/TinyEngine/Core/Events/: Signal.cpp  Signal.hpp  Slot.cpp  Slot.hpp
src/TinyEngine/Core/GUI/: GUI.cpp  GUI.hpp  Widget.cpp  Widget.hpp  WidgetView.cpp  WidgetView.hpp  WidgetsContainer.cpp  WidgetsContainer.hpp  WidgetsLayersContainer.cpp  WidgetsLayersContainer.hpp
src/TinyEngine/Core/Gui/: Gui.cpp  Gui.hpp  GuiVisitor.hpp  GuiWidget.hpp  GuiWidgetContainer.cpp  GuiWidgetContainer.hpp
src/TinyEngine/Core/Logger/: Logger.cpp  Logger.hpp
src/TinyEngine/Core/Reflection/: IReflectionMember.cpp  IReflectionMember.hpp  ReflectionMember.cpp  ReflectionMember.hpp  ReflectionObject.cpp  ReflectionObject.hpp  TypeFactory.cpp  TypeFactory.hpp
src/TinyEngine/Core/Render/: Point.hpp  Rect.hpp  Render.cpp  Render.hpp  RenderLayer.cpp  RenderLayers.cpp  RenderObject.cpp  RenderObject.hpp  RenderWindow.cpp  RenderWindow.hpp  RenderWindowSettings.hpp
src/TinyEngine/Core/Resources/: FileSystem.cpp  FileSystem.hpp
src/TinyEngine/Core/Serialization/: IArchive.cpp  IArchive.hpp  XmlArchive.cpp  XmlArchive.hpp
src/TinyEngine/Data/: CounterRef.cpp  CounterRef.hpp  Data.hpp  EventableValue.cpp  EventableValue.hpp  Factory.cpp  Factory.hpp  Properties.cpp  Properties.hpp  Queue.cpp  Queue.hpp  Singleton.cpp  Singleton.hpp
src/TinyEngine/Debug/: Assert.cpp  Assert.hpp  Debug.cpp  Debug.hpp  DebugAdapter.cpp  DebugAdapter.hpp  DebugMessage.cpp  DebugMessage.hpp  Log.cpp  Log.hpp
src/TinyEngine/Event/: Event.hpp  EventSender.cpp  EventSender.hpp  EventSubscriber.cpp  EventSubscriber.hpp
src/TinyEngine/Events/: Event.cpp  Event.hpp  EventParameters.cpp  EventParameters.hpp  Events.hpp  Listener.cpp  Listener.hpp  Publisher.cpp  Publisher.hpp  Sender.cpp  Sender.hpp  Subscriber.cpp  Subscriber.hpp
src/TinyEngine/Graphics/: Graphics.hpp  IPoint.hpp  IWindow.hpp
src/TinyEngine/Gui/: Gui.cpp  Gui.hpp  GuiController.cpp  GuiController.hpp  GuiControllers.cpp  GuiControllers.hpp  GuiModel.cpp  GuiModel.hpp  GuiView.cpp  GuiView.hpp  GuiVisitor.cpp  GuiVisitor.hpp  GuiWidget.cpp  GuiWidget.hpp  GuiWidgetContainer.cpp  GuiWidgetContainer.hpp  SfmlGuiDelegate.cpp  SfmlGuiDelegate.hpp
src/TinyEngine/Level/: Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  Level.cpp  Level.hpp  LevelManager.cpp  LevelManager.hpp  Scene.cpp  Scene.hpp
src/TinyEngine/Logger/: Logger.cpp  Logger.hpp
src/TinyEngine/Properties/: IProperty.cpp  IProperty.hpp  Properties.cpp  Properties.hpp  PropertiesData.cpp  PropertiesData.hpp  PropertyData.cpp  PropertyData.hpp
src/TinyEngine/Render/: ILayer.cpp  ILayer.hpp  ILayout.cpp  ILayout.hpp  IObject.cpp  IObject.hpp  IRenderObject.cpp  IRenderObject.hpp  IRenderWindow.cpp  IRenderWindow.hpp  Layers.cpp  Layers.hpp  LightObject.cpp  LightObject.hpp  ObjectsLayer.cpp  ObjectsLayer.hpp  ObjectsLayout.cpp  ObjectsLayout.hpp  Point.cpp  Point.hpp  RadialLightObject.cpp  RadialLightObject.hpp  Rect.cpp  Render.cpp  Render.hpp  RenderLayer.cpp  RenderLayer.hpp  RenderLayers.cpp  RenderLayers.hpp  RenderManager.cpp  RenderManager.hpp  RenderObject.hpp  RenderWindow.hpp  RenderWindowSettings.cpp  RenderWindowSettings.hpp  SfmlRender.cpp  SfmlRender.hpp  Texture.cpp  Texture.hpp  VisualObject.cpp  (+1 more)
src/TinyEngine/Utils/: Singleton.cpp  Singleton.hpp  XmlUtils.cpp  XmlUtils.hpp
src/TinyEngine/World/: Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  World.cpp  World.hpp
templates/assets/: project.xml  root.xml  states.xml
templates/assets/packs/: pack1.xml
(+311 files in other folders)
